Finalized css and html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="landing.css">
 </head>
 <body>
     <div class="header">
@@ -16,40 +17,40 @@
         </div>
     </div>
     <div class="content-one">
-        <div>This website is awesome
+        <div class="content-one-left">
+        <div id="max">This website is awesome
+        </div>
         <p>
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
         </p>
-        <button>
+        <button class="b1">
             Sign up
         </button>
         </div>
         <img class="head-img" src="images/image1.jpg" alt="Inside an industrial building">
     </div>
     <div class="content-two">
-        <div class="Title">
+        <div class="title">
             Some random information
         </div>
         <div class="deets">
-            <div class="info">
             <div class="image-block">   
             <img class="body-img" src="images/img1.jpg" alt="Random industrial picture">
             <p>this is some subtext under an illustration or image</p>
             </div> 
             <div class="image-block">   
-                <img class="body-img" src="images/img1.jpg" alt="Random industrial picture">
+                <img class="body-img" src="images/img2.jpg" alt="Random industrial picture">
                 <p>this is some subtext under an illustration or image</p>
             </div> 
             
             <div class="image-block">   
-                <img class="body-img" src="images/img1.jpg" alt="Random industrial picture">
+                <img class="body-img" src="images/img3.jpg" alt="Random industrial picture">
                 <p>this is some subtext under an illustration or image</p>
             </div> 
             <div class="image-block">   
-                <img class="body-img" src="images/img1.jpg" alt="Random industrial picture">
+                <img class="body-img" src="images/img4.jpg" alt="Random industrial picture">
                 <p>this is some subtext under an illustration or image</p>
             </div> 
-        </div> 
         </div>           
     </div>
     <div class="content-three">
@@ -58,7 +59,7 @@
                 This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Only Ymir knows. All I know is that it looks nice.
             </div>
             <div class="author">
-                - Hange Zoe
+                -Hange Zoe
             </div>
         </div>
     </div>
@@ -72,13 +73,13 @@
             Sign up for our product by clicking that button right over there.
             </div>
         </div>
-        <button>
+        <button class="b2">
             Sign up
         </button>
         </div>
     </div>
-    <footer>
+    <div class="footer">
         Copyright @ The Odin Project 2021
-    </footer>
+    </div>
 </body>
 </html>
